    names with DBCS support enabled in non-PC98 mode.
    By default DOSBox-X will enable auto-detection for
    box-drawing characters, and this can be disabled by
    setting new option "ttf.autoboxdraw" to "false".
    KEYB command (and the keyboardlayout config option)
    also accept "jp", "ko", "cn", "tw", "hk", "zh" as
    layout names for setting code pages. (Wengier)
  - Improved handling of Ctrl+C/Ctrl+Break for shell-
    based DOS programs. (Wengier)
  - Added menu options "Display TTF blinking cursor"
    and "CJK: Auto-detect box-drawing symbols" under
    "Video" => "TTF options" menu group to toggle the
    TTF options ttf.blinkc and ttf.autoboxdraw, also a
    menu option "CJK: Switch DBCS/SBCS mode" to toggle
    between DBCS and SBCS modes temporarily. (Wengier)
  - Command-line option -fastlaunch will now suppress
    messages by "automountall=true" option. (Wengier)
  - Setting "irq" to "0" in [sblaster] section of the
    config file will use the default IRQ number for the
    sound card type. Also fixed "irq=-1", "dma=-1" and
    "hdma=-1" not working as desired. (Wengier)
  - The return value of AL in Int21/AX=0Eh is no longer
    fixed. The game Jurassic Park may run after moving
    Z drive to a different letter (e.g. E:). (Wengier)
  - Added "Change current floppy image..." and "Change
    current CD image..." menu options to change the
    currently active floppy disk image(s) on drive A: &
    B: and ISO/CUE image(s) on CD drives respectively.
    This makes it possible to change the active floppy
    disk and/or CD images while a guest system (e.g.
    Windows 9x) is currently running. (Wengier)
  - Added "Restart DOSBox-X with config file..." menu
    option to start DOSBox-X with the specified config
    file automatically from the menu. (Wengier)
  - Added "Refresh rate..." menu option (under "Video")
    to set the video refresh rate. (Wengier)
  - Added "Enable A20 gate" menu option (under "DOS")