@@ -873,7 +873,9 @@ pc-98 force ibm keyboard layout          = false
 #                            For example, WP6 will set the word processor as WordPerfect 6, and XY4 will set the word processor as XyWrite 4.
 #                            Word processor-specific features like on-screen text styles and 512-character font will be enabled based on this.
 #DOSBOX-X-ADV:#                ttf.wpbg: You can optionally specify a color to match the background color of the specified word processor for the TTF output.
-#DOSBOX-X-ADV:#                            Use the DOS color number (0=Black, 1=Blue, 2=Green, 3=Cyan, 4=Red, 5=Magenta, 6=Yellow, 7=White, etc) for this.
+#DOSBOX-X-ADV:#                            Use the DOS color number (0-15: 0=Black, 1=Blue, 2=Green, 3=Cyan, 4=Red, 5=Magenta, 6=Yellow, 7=White, etc) for this.
+#DOSBOX-X-ADV:#                ttf.wpfg: You can optionally specify a color to match the foreground color of the specified word processor for the TTF output.
+#DOSBOX-X-ADV:#                            Use the DOS color number (0-7: 0=Black, 1=Blue, 2=Green, 3=Cyan, 4=Red, 5=Magenta, 6=Yellow, 7=White) for this.
 #DOSBOX-X-ADV:#                ttf.bold: If set, DOSBox-X will display bold text in visually (requires a word processor be set) for the TTF output.
 #DOSBOX-X-ADV:#                            This is done either with the actual bold font specified by the ttf.fontbold option, or by making it bold automatically.
 #DOSBOX-X-ADV:#              ttf.italic: If set, DOSBox-X will display italicized text visually (requires a word processor be set) for the TTF output.
@@ -911,6 +913,7 @@ ttf.lins                = 0
 ttf.cols                = 0
 ttf.wp                  = 
 #DOSBOX-X-ADV:ttf.wpbg                = -1
+#DOSBOX-X-ADV:ttf.wpfg                = 7
 #DOSBOX-X-ADV:ttf.bold                = true
 #DOSBOX-X-ADV:ttf.italic              = true
 #DOSBOX-X-ADV:ttf.underline           = true
