@@ -48,7 +48,7 @@ typedef struct {
 
 Bitu call_program;
 extern const char *modifier;
-extern int enablelfn, paste_speed, wheel_key, freesizecap, wpType, wpVersion, wpBG, lastset;
+extern int enablelfn, paste_speed, wheel_key, freesizecap, wpType, wpVersion, wpBG, wpFG, lastset;
 extern bool dos_kernel_disabled, force_nocachedir, wpcolon, lockmount, enable_config_as_shell_commands, load, winrun, winautorun, startwait, startquiet, mountwarning, wheel_guest, clipboard_dosapi, noremark_save_state, force_load_state, sync_time, manualtime, showbold, showital, showline, showsout, char512;
 
 /* This registers a file on the virtual drive and creates the correct structure for it*/
@@ -1418,6 +1418,12 @@ void CONFIG::Run(void) {
 							} else if (!strcasecmp(inputline.substr(0, 9).c_str(), "ttf.wpbg=")) {
 #if defined(USE_TTF)
                                 wpBG = section->Get_int("ttf.wpbg");
+                                resetFontSize();
+#endif
+							} else if (!strcasecmp(inputline.substr(0, 9).c_str(), "ttf.wpfg=")) {
+#if defined(USE_TTF)
+                                wpFG = section->Get_int("ttf.wpfg");
+                                if (wpFG<0) wpFG = 7;
                                 resetFontSize();
 #endif
 							} else if (!strcasecmp(inputline.substr(0, 9).c_str(), "ttf.bold=")) {
